[package]
name = "bhcq"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["udp", "macros"] }
nix = "0.16"
libc = "0.2"
dhcpv4 = { path = "../dhcpv4" }
